# wikibrain

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  release-policy.json
.github/workflows/: ci.yml
benchmarks/: __init__.py  retrieval_quality.py  second_brain.py
benchmarks/corpora/: retrieval-quality-v1.json
benchmarks/results/: retrieval-quality-v1.json  second-brain-v1.json
docs/assets/: README.md
integrations/claude/: settings.hooks.json
integrations/codex/: hooks.json
packaging/homebrew/: README.md
packaging/homebrew/Formula/: wikibrain.rb.in
plugins/wikibrain/.codex-plugin/: plugin.json
plugins/wikibrain/hooks/: hooks.json
plugins/wikibrain/scripts/: brain-hook
plugins/wikibrain/skills/wikibrain/: SKILL.md
scripts/: install-windows.ps1  render_benchmark_chart.py  render_homebrew_formula.py  render_retrieval_quality_chart.py
src/wikibrain/: __init__.py  cli.py  config.py  curation.py  hook_adapters.py  hooks.py  installer.py  models.py  recall.py  redaction.py  skill_installer.py  storage.py  version_policy.py  wikimap_adapter.py  windows_cache.py
tests/: test_adaptive_memory.py  test_benchmark.py  test_forget.py  test_grok_integration.py  test_homebrew.py  test_hook_contract.py  test_installer.py  test_installer_hardening.py  test_memory_relations.py  test_memory_safety.py  test_real_wikimap.py  test_redaction.py  test_release_regressions.py  test_retrieval_quality.py  test_retrieval_quality_chart.py  test_skill_installer.py  test_storage.py  test_version_policy.py  test_wikimap_adapter.py  test_windows_packaging.py
tests/fixtures/: fake_wikimap.py
tests/fixtures/hooks/claude/: post_compact.json  post_tool.json  session_start.json  stop.json  user_prompt.json
(+7 files in other folders)
